data/derived/comb/progs/unify/prog1103.ml.out
Characters 50-51:
  let fixpoint (f,b) = wwhile((let k x = f x = x in f), b);;
                                                    ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a * bool
